fixed main heading/subheading spacing, moved nav links

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 * {
@@ -13,13 +13,20 @@ button, input {
     font-size: 100%;
 }
 
-h2 {
-    font-size: 1.2rem;
+h1 {
+    font-family: 'Homemade Apple', cursive;
+    /* border: 1px solid blue; */
+    font-size: 2rem;
 }
 
+h2 {
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+}
 
-
-
+p {
+    line-height: 1.5;
+}
 
 /* --- HEADER --- */ 
 header {
@@ -27,56 +34,80 @@ header {
     top: 0;
     right: 0;
     left: 0;
-    height: 150px;
+    height: auto;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    background-color: aquamarine;
+    background-color: white;
     padding: 15px;
+    border-bottom: 1px solid rgb(196, 196, 196);
 }
 
 .logo-brand-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    border: 2px solid orangered;
-    background-color: rgba(255, 68, 0, 0.466);
+    /* border: 2px solid orangered; */
+    /* background-color: rgba(255, 68, 0, 0.466); */
+}
+
+.brand-name {
+    font-family: 'IM Fell Great Primer', serif;
+    font-size: 1.3rem;
+    /* border: 2px solid black; */
 }
 
 .logo-img {
-    width: 100px;
-    height: 100px;
-    border: 2px solid blue;
+    width: 90px;
+    height: 90px;
+    /* border: 2px solid blue; */
 }
 
 .header-nav {
+    flex-basis: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
-    border: 2px solid red;
-    /* margin-right: 30px; */
+    align-items: center;
+    /* border: 2px solid rgb(0, 100, 17); */
+    /* background-color: rgba(1, 148, 25, 0.479); */
+    margin-top: 20px;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: black;
+    /* border: 1px solid red; */
+    width: 130px;
+    text-align: center;
+    padding: 5px 0;
+    transition: all 0.2s;
+}
+
+.nav-link:hover {
+    background-color: rgb(236, 236, 236);
 }
 
 
 /* --- MAIN CONTENT AREA --- */
 main {
-    background-color:lightseagreen;
-    margin-top: 150px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    /* background-color:lightseagreen; */
+    margin-top: 169px;
+    padding-top: 20px;
 }
 
 .page-heading {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     text-align: center;
-    border: 2px solid orchid;
-    background-color: rgba(218, 112, 214, 0.479);
+    /* border: 2px solid orchid; */
+    /* background-color: rgba(218, 112, 214, 0.479); */
 }
 
 .selling-points {
     width: 100%;
     height: auto;
-    border: 2px solid yellow;
-    background-color: rgba(255, 255, 0, 0.493);
+    /* border: 2px solid yellow; */
+    /* background-color: rgba(255, 255, 0, 0.493); */
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: 1fr 1fr 1fr;
